--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -43,3 +43,22 @@
 .small-sidebar p{
     display:none;
 }
+.small-sidebar h3{
+    display:none;
+}
+.small-sidebar hr{
+    width: 50px;
+    margin-bottom:25px;
+    
+}
+.side-link.active img{
+    padding-bottom:2px;
+    border-bottom:3px solid red;
+}
+
+@media(max-width:900px){
+    .sidebar{
+        display:none;
+    
+    }
+}
