--- a/src/Pages/Video/Video.css
+++ b/src/Pages/Video/Video.css
@@ -7,4 +7,11 @@
     display:flex;
     justify-content:space-between;
     flex-wrap:wrap;
+    margin-top: 45px;
+}
+@media(max-width:900px){
+    .play-container{
+        padding-left: 5%;
+        padding-right: 5%;
+    }
 }
